@@ -549,5 +549,6 @@
 	   - fix in RANDOMN/RANDOMU (Binomial OK, conflicting keywords detected ...)
            - Initial import for QROMB() and QSIMP() (based on QROMB) and QROMO() [not finished]
            - Initial import for TRISOL()
+	   - fix in ERASE for background color (preparing Coyote lib. support)
 
 
